removed additional fields
